--- a/SportsSideKick/app/src/sportsidekick/res/values-de/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values-de/strings.xml
@@ -3,18 +3,14 @@
 
     <string name="friend_requests">Freundschaftsanfragen</string>
 
-    <string name="app_name">SportsSideKick</string>
     <string name="this_language">German</string>
 
     <!-- Login scree -->
     <string name="terms_and_conditions">http://www.sortdirectkick.tv/terms</string>
     <string name="login_sign_up">REGISTRIEREN</string>
     <string name="login_login">ANMELDEN</string>
-    <string name="login_slider_text_1">Bringing fans together</string>
-    <string name="login_slider_text_2">Bald erhältlich!</string>
     <string name="login_login_email">E-Mail</string>
     <string name="login_login_password">Kennwort</string>
-    <string name="login_login_login">Anmelden</string>
     <string name="login_login_forgot_text">Kennwort vergessen?</string>
     <string name="login_login_message_login_failed">Anmeldung gescheitert!</string>
     <string name="login_login_message_authentication_failed">Bitte gib dein Kennwort erneut ein!</string>
@@ -31,9 +27,8 @@
     <string name="sign_up_sign_up">Registrieren</string>
     <string name="sign_up_text">By singing up, you are agree to SportsSidekick\'"s <font color="@android:color/white"> Terms and Conditions of Use </font> and <font color="@android:color/white">Privacy Policy.</font></string>
 
-    <string name="dialog_ok">Ok</string>
+    <string name="dialog_ok">OK</string>
     <string name="dialog_warning">Warning</string>
-    <string name="dialog_message">Du musst deinen </string>
     <string name="dialog_message_not_valid_email">Bitte eine gültige E-Mail-Adresse eingeben.</string>
     <string name="dialog_internet_connection_failed">Du musst mit dem Internet verbunden sein, um Sports Sidekick nutzen zu können</string>
     <string name="dialog_message_facebook_error">Dein öffentliches Profil kann nicht abgerufen werden. Bitte erneut versuchen!</string>
@@ -46,7 +41,6 @@
 
     <string name="club_radio_caption">Club Radio</string>
     <string name="sporting_cp_title">Sporting CP</string>
-    <string name="demo">demo</string>
     <string name="club_tv_caption">Club TV</string>
     <string name="fantasy_caption">Fantasy</string>
     <string name="statistics_caption">Statistik</string>
@@ -85,7 +79,6 @@
     <string name="your_statement">Your Statement</string>
     <string name="choose_your_language">Sprache wählen</string>
     <string name="english">English</string>
-    <string name="chinese">Chinese</string>
     <string name="portuguese">Portugese</string>
     <string name="friend_profile">Freund-Informationen</string>
     <string name="member_since">Member since</string>
